Making overall thumbs section smaller so that we dont get weird background issue.

--- a/public/stylesheets/css.css
+++ b/public/stylesheets/css.css
@@ -73,8 +73,8 @@ div#container nav ul a li p {
 
 nav > ul {
 	margin: 0;
-	padding: 25px 0 0 5%;
-	width: 90%;
+	padding: 25px 0 0 10%;
+	width: 80%;
 }
 
 div#videos { display: none; padding-bottom: 25px; }
